# Stock-AI

./: .gitignore  README.md  TESTING.md  main.py  nse_symbols.json  pyproject.toml  requirements-dev.txt  requirements.txt  test_combined_holdings.py  test_groww_api.py  test_positions.py  v3.0.md  verify_v2_1_setup.py
src/: config.py
src/api/: dependencies.py  router.py
src/models/: analysis.py  calibration.py  holdings.py  intraday.py  market.py  outcome.py
src/scheduler/: jobs.py  setup.py
src/services/: ai_engine.py  capital_allocator.py  database.py  drawdown_breaker.py  event_risk_filter.py  groww_service.py  intraday_engine.py  intraday_monitor.py  intraday_scanner.py  market_data.py  micro_monitor.py  outcome_tracker.py  portfolio_monitor.py  regime_classifier.py  screener.py  signal_calibrator.py  telegram_bot.py
src/tools/: definitions.py  executor.py
src/utils/: cache.py  circuit_breaker.py  correlation.py  exceptions.py  formatters.py  indicators.py  intraday_indicators.py  kelly.py  logger.py  market_hours.py
tests/: conftest.py  test_indicators.py  test_market_hours.py  test_v2_1_features.py
